--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+*./out
 
 # Log file
 *.log
@@ -19,5 +20,7 @@
 *.tar.gz
 *.rar
 *.kotlin_module
+*.idea
+*.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
