--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Compiled class file
 *.class
-*./out
 
 # Log file
 *.log
@@ -24,3 +23,11 @@
 *.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# INTELIJ IDEA
+/out
+.idea
+java-practice.iml
+
+# MAC
+.DS_Store
